# mpeix-backend

./: .gitattributes  .gitignore  Cargo.toml  README.md  create_module.sh  rust-toolchain
.github/media/: mpeix-backend-arch-demo.drawio
.github/workflows/: rust-deploy-beta.yaml  rust-deploy-prod.yaml  rust-master.yaml  rust-pull-request.yaml
app_misty_resonance/: Dockerfile  Pipfile  README.md  requirements.txt
app_misty_resonance/src/: main.py  model.py
app_schedule/: Cargo.toml  Dockerfile  README.md
app_schedule/src/: di.rs  errors.rs  main.rs  routing.rs
app_schedule_telegram_bot/: Cargo.toml  Dockerfile  README.md
app_schedule_telegram_bot/src/: di.rs  main.rs  routing.rs
app_schedule_vk_bot/: Cargo.toml  Dockerfile  README.md
app_schedule_vk_bot/src/: di.rs  main.rs  routing.rs
app_telegram_bot/: Cargo.toml  Dockerfile  README.md
app_telegram_bot/src/: di.rs  main.rs  routing.rs
app_vk_bot/: Cargo.toml  Dockerfile  README.md
app_vk_bot/src/: di.rs  main.rs  routing.rs
common_database/: Cargo.toml
common_database/src/: lib.rs
common_errors/: Cargo.toml
common_errors/src/: errors.rs
common_in_memory_cache/: Cargo.toml
common_in_memory_cache/src/: cache.rs
common_persistent_cache/: Cargo.toml
common_persistent_cache/src/: cache.rs
crates/app_schedule/src/: main.rs
crates/common_actix/: Cargo.toml
crates/common_actix/src/: lib.rs
crates/common_api_macro/: Cargo.toml
crates/common_api_macro/impl/: Cargo.toml
crates/common_api_macro/impl/src/: common_api.rs  lib.rs  method.rs  query.rs
crates/common_api_macro/models/: Cargo.toml
crates/common_api_macro/models/src/: lib.rs
crates/common_api_macro/src/: lib.rs
crates/common_api_macro/tests/: tests.rs
crates/common_database/: Cargo.toml
crates/common_database/src/: lib.rs
crates/common_di/: Cargo.toml
crates/common_di/src/: lib.rs
crates/common_errors/: Cargo.toml
crates/common_errors/src/: errors.rs
crates/common_in_memory_cache/: Cargo.toml
crates/common_in_memory_cache/src/: cache.rs
crates/common_persistent_cache/: Cargo.toml
crates/common_persistent_cache/src/: cache.rs  lib.rs
crates/common_restix/: Cargo.toml
crates/common_restix/src/: lib.rs
crates/common_rust/: Cargo.toml
crates/domain_bot/: Cargo.toml
crates/domain_bot/res/: msg_already_started.txt  msg_cannot_find_schedule.txt  msg_internal_error_telegram.txt  msg_internal_error_vk.txt  msg_ready_to_change_schedule.txt  msg_schedule_changed_successfully.txt  msg_schedule_search_results.txt  msg_show_help_telegram.txt  msg_show_help_vk.txt  msg_start_greetings.txt  msg_unknown_command_telegram.txt  msg_unknown_command_vk.txt  msg_unknown_message_type_telegram.txt  msg_unknown_message_type_vk.txt
crates/domain_bot/sql/: create_peer.pgsql  create_peer_by_platform.pgsql  select_or_insert_peer.pgsql  update_peer.pgsql
crates/domain_bot/src/: di.rs  lib.rs  models.rs  mpeix_api.rs  reducer.rs  renderer.rs  usecases.rs
crates/domain_bot/src/peer/: repository.rs
crates/domain_bot/src/schedule/: repository.rs
crates/domain_bot/src/search/: repository.rs
crates/domain_mobile/: Cargo.toml
crates/domain_schedule/: Cargo.toml
crates/domain_schedule/sql/: create_schedule_search_results.pgsql
crates/domain_schedule/src/: di.rs  lib.rs  mpei_api.rs  time.rs  usecases.rs
crates/domain_schedule/src/dto/: mpei.rs  mpeix.rs
crates/domain_schedule/src/id/: repository.rs
crates/domain_schedule/src/schedule/: compat.rs  mapping.rs  mediator.rs  mod.rs  repository.rs
crates/domain_schedule/src/schedule_shift/: repository.rs
crates/domain_schedule/src/search/: mapping.rs  mod.rs  repository.rs
crates/domain_schedule_cooldown/: Cargo.toml
crates/domain_schedule_cooldown/src/: lib.rs
crates/domain_schedule_models/: Cargo.toml
crates/domain_schedule_shift/: Cargo.toml
crates/domain_schedule_shift/res/: default_schedule_shift.toml
crates/domain_schedule_shift/src/: lib.rs
crates/domain_telegram_bot/: Cargo.toml
crates/domain_telegram_bot/src/: di.rs  lib.rs  models.rs  telegram_api.rs  usecases.rs
crates/domain_vk_bot/: Cargo.toml
crates/domain_vk_bot/src/: lib.rs  models.rs  usecases.rs  vk_api.rs
crates/feature_schedule/: Cargo.toml
crates/feature_schedule/src/: di.rs  lib.rs  v1.rs
crates/feature_telegram_bot/: Cargo.toml
crates/feature_telegram_bot/src/: bot.rs  di.rs
crates/feature_vk_bot/: Cargo.toml
crates/feature_vk_bot/src/: bot.rs  di.rs  lib.rs
crates/restix/: Cargo.toml  README.md
crates/restix/impl/: Cargo.toml
crates/restix/impl/src/: api.rs  common_api.rs  commons.rs  lib.rs  method.rs  query.rs
crates/restix/macro/: Cargo.toml
crates/restix/macro/src/: lib.rs
crates/restix/src/: lib.rs
domain_mobile/src/: lib.rs
domain_schedule/: Cargo.toml
domain_schedule/sql/: select_all_schedule_search_results.pgsql  select_all_schedule_search_results_typed.pgsql  update_schedule_search_results.pgsql
domain_schedule/src/: di.rs  lib.rs  repository.rs  time.rs  usecases.rs
domain_schedule/src/dto/: mod.rs  mpeix.rs
domain_schedule/src/id/: repository.rs
domain_schedule/src/schedule/: mapping.rs  mediator.rs  mod.rs  repository.rs
domain_schedule/src/schedule_shift/: repository.rs
domain_schedule/src/search/: mapping.rs  repository.rs
domain_schedule/src/sources/: id.rs  mediator.rs  mod.rs  schedule.rs
domain_schedule_models/: Cargo.toml
domain_schedule_search/: Cargo.toml
domain_schedule_shift/: Cargo.toml
domain_schedule_shift/res/: schedule_shift_example.toml
domain_schedule_shift/src/: lib.rs
domain_telegram_bot/: Cargo.toml
feature_schedule/: Cargo.toml
feature_schedule/src/: v1.rs
feature_telegram_bot/: Cargo.toml
feature_vk_bot/: Cargo.toml
libs/restix/: Cargo.toml  README.md
libs/restix/impl/: Cargo.toml
libs/restix/impl/src/: api.rs  commons.rs  lib.rs  method.rs
libs/restix/macro/: Cargo.toml
libs/restix/macro/src/: lib.rs
libs/restix/src/: lib.rs
media/: mpeix-backend-arch-demo.drawio
restix/impl/: Cargo.toml
restix/impl/src/: api.rs  method.rs
src/: main.rs
(+6 files in other folders)
