[package]
name = "app_schedule"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
readme = "README.md"

[dependencies]
common_actix = { workspace = true }
common_database = { workspace = true }
common_errors = { workspace = true }
domain_mobile = { workspace = true }
domain_schedule = { workspace = true }
domain_schedule_models = { workspace = true }
feature_schedule = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
derive_more = { version = "0.99.17" }
env_logger = { workspace = true }
envmnt = "0.10.4"
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
