[package]
name = "app_schedule"
version.workspace = true
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
readme = "README.md"

[dependencies]
common_actix = { workspace = true }
common_database = { workspace = true }
common_errors = { workspace = true }
common_restix = { workspace = true }
domain_mobile = { workspace = true }
domain_schedule = { workspace = true }
domain_schedule_cooldown = { workspace = true }
domain_schedule_models = { workspace = true }
feature_schedule = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
restix = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
