[package]
name = "app_telegram_bot"
version.workspace = true
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
common_actix = { workspace = true }
common_database = { workspace = true }
common_errors = { workspace = true }
common_restix = { workspace = true }
common_rust = { workspace = true }
domain_bot = { workspace = true }
domain_schedule_models = { workspace = true }
domain_telegram_bot = { workspace = true }
feature_telegram_bot = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
restix = { workspace = true }
