[package]
name = "app_vk_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
readme = "README.md"

[dependencies]
common_actix = { workspace = true }
common_database = { workspace = true }
common_errors = { workspace = true }
domain_bot = { workspace = true }
domain_schedule_models = { workspace = true }
domain_vk_bot = { workspace = true }
feature_vk_bot = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
