[package]
name = "domain_schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
domain_schedule_models = { path = "../domain_schedule_models" }
common_in_memory_cache = { path = "../common_in_memory_cache" }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "1.0" }
reqwest = { version = "0.11", features = ["gzip", "deflate", "json"] }
tokio = { version = "1.23" }
num-traits = { version = "0.2.15" }
regex = { version = "1.7" }
lazy_static = { version = "1.4" }
