[package]
name = "domain_schedule_search"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
common_errors = { path = "../common_errors" }
common_in_memory_cache = { path = "../common_in_memory_cache" }
common_persistent_cache = { path = "../common_persistent_cache" }
domain_schedule_models = { path = "../domain_schedule_models" }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1.0" }
reqwest = { version = "0.11", features = ["gzip", "deflate", "json"] }
tokio = { version = "1.23" }
