[package]
name = "feature_schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
domain_schedule = { path = "../domain_schedule" }
domain_schedule_models = { path = "../domain_schedule_models" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23" }
thiserror = { version = "1.0" }
