[package]
name = "feature_schedule"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
domain_schedule = { path = "../domain_schedule" }
domain_schedule_models = { path = "../domain_schedule_models" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23" }
anyhow = { version = "1.0" }
