[package]
name = "common_api_macro"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
common_api_macro_impl = { path = "impl" }
common_api_macro_models = { path = "models" }

reqwest = { workspace = true, optional = true }
serde = { workspace = true }
