[package]
name = "common_database"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
rust-version.workspace = true

[dependencies]
common_rust = { workspace = true }

anyhow = { workspace = true }
deadpool-postgres = { workspace = true, features = ["serde"] }
tokio-postgres = { workspace = true }
