[package]
name = "common_restix"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
rust-version.workspace = true

[dependencies]
common_errors = { workspace = true }
common_rust = { workspace = true }

anyhow = { workspace = true }
reqwest = { workspace = true }
