[package]
name = "domain_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
anyhow = { version = "1.0" }
deadpool-postgres = { version = "0.10", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23" }
tokio-postgres = "0.7"
