[package]
name = "domain_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
common_errors = { workspace = true }
domain_schedule_models = { workspace = true }

anyhow = { workspace = true }
chrono = "0.4"
deadpool-postgres = { version = "0.10", features = ["serde"] }
env_logger = { workspace = true }
lazy_static = { version = "1.4" }
log = { workspace = true }
regex = { version = "1.7" }
reqwest = { workspace = true, features = ["gzip", "deflate", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
tokio-postgres = "0.7"
