[package]
name = "domain_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
common_di = { workspace = true }
common_errors = { workspace = true }
common_restix = { workspace = true }
domain_schedule_models = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
deadpool-postgres = { workspace = true, features = ["serde"] }
env_logger = { workspace = true }
lazy_static = { version = "1.4" }                                      # TODO: replace with once_cell
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "deflate", "json"] }
restix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
