[package]
name = "domain_schedule"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
common_database.workspace = true
common_errors.workspace = true
common_in_memory_cache.workspace = true
common_persistent_cache.workspace = true
domain_schedule_models.workspace = true
domain_schedule_shift.workspace = true

anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
env_logger = "0.10"
envmnt = "0.10.4"
lazy_static = { version = "1.4" }
log = "0.4"
num-traits = { version = "0.2.15" }
regex = { version = "1.7" }
reqwest = { version = "0.11", features = ["gzip", "deflate", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23" }
tokio-postgres = "0.7"
