[package]
name = "domain_schedule"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
common_errors = { workspace = true }
common_in_memory_cache = { workspace = true }
common_persistent_cache = { workspace = true }
domain_schedule_models = { workspace = true }
domain_schedule_shift = { workspace = true }

anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
env_logger = { workspace = true }
envmnt = "0.10.4"
lazy_static = { version = "1.4" }
log = { workspace = true }
num-traits = { version = "0.2.15" }
regex = { version = "1.7" }
reqwest = { workspace = true, features = ["gzip", "deflate", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
tokio-postgres = "0.7"
