[package]
name = "domain_schedule_cooldown"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
rust-version.workspace = true

[dependencies]
common_errors = { workspace = true }
common_rust = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
