[package]
name = "domain_schedule_shift"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros"] }
