[package]
name = "domain_telegram_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
common_errors = { workspace = true }

anyhow = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "deflate", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
