[package]
name = "domain_telegram_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
rust-version.workspace = true

[dependencies]
common_errors = { workspace = true }
common_restix = { workspace = true }
common_rust = { workspace = true }

anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "deflate", "json"] }
restix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
