[package]
name = "domain_vk_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
common_errors = { workspace = true }

anyhow = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "deflate", "json"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
