[package]
name = "feature_schedule"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[dependencies]
domain_mobile.workspace = true
domain_schedule.workspace = true
domain_schedule_models.workspace = true

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23" }
anyhow = { version = "1.0" }
