[package]
name = "feature_schedule"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
rust-version.workspace = true

[dependencies]
domain_mobile = { workspace = true }
domain_schedule = { workspace = true }
domain_schedule_models = { workspace = true }

serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
