[package]
name = "feature_telegram_bot"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
rust-version.workspace = true

[dependencies]
common_errors = { workspace = true }
common_rust = { workspace = true }
domain_bot = { workspace = true }
domain_telegram_bot = { workspace = true }

anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
