[package]
name = "restix"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
restix_impl = { path = "impl" }
restix_macro = { path = "macro" }

reqwest = { workspace = true, optional = true }
serde = { workspace = true }
