[package]
name = "restix"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]

[lib]
doctest = false

[dependencies]
restix_impl = { path = "impl" }
restix_macro = { path = "macro" }

reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
